2017-04-16  Joseph Pecoraro  <pecoraro@apple.com>

        test262: test262/test/built-ins/Object/prototype/toLocaleString/primitive_this_value.js
        https://bugs.webkit.org/show_bug.cgi?id=170882

        Reviewed by Saam Barati.

        * js/dom/object-prototype-toLocaleString-expected.txt:
        * js/dom/script-tests/object-prototype-toLocaleString.js:
        Test the case of toLocaleString where toString does not exist.

2017-04-16  Chris Dumez  <cdumez@apple.com>

        CMD+R / CMD+Q is considered as user interaction and beforeunload alert is shown
        https://bugs.webkit.org/show_bug.cgi?id=169995
        <rdar://problem/23798897>

        Reviewed by Sam Weinig.

        Add layout test coverage.

        * fast/events/beforeunload-alert-handled-keydown-expected.txt: Added.
        * fast/events/beforeunload-alert-handled-keydown.html: Added.
        * fast/events/beforeunload-alert-unhandled-keydown-expected.txt: Added.
        * fast/events/beforeunload-alert-unhandled-keydown.html: Added.

2017-04-16  Joseph Pecoraro  <pecoraro@apple.com>

        test262: test262/test/built-ins/Object/getOwnPropertyNames/15.2.3.4-4-44.js
        https://bugs.webkit.org/show_bug.cgi?id=170879

        Reviewed by Saam Barati.

        * js/Object-getOwnPropertyNames-expected.txt:
        * js/script-tests/Object-getOwnPropertyNames.js:

2017-04-14  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: WebSockets: messages with non-latin letters are displayed incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=170760

        Reviewed by Joseph Pecoraro.

        Test sending and receiving text and binary (blob and array buffer) data.

        * http/tests/websocket/tests/hybi/inspector/binary-expected.txt: Added.
        * http/tests/websocket/tests/hybi/inspector/binary.html: Added.
        * http/tests/websocket/tests/hybi/inspector/binary_wsh.py: Added.
        (web_socket_do_extra_handshake):
        (web_socket_transfer_data):